test/files/pos/t5031_3/Main_2.scala
package org.example

object Main extends App {
   println(foo.bar.Foo.bar)
}

